Limpeza de codigo, alterando LuckPermsAPI para Vault API, Colocando HP e mana na classe Attributes (ainda falta aprimoramento).